--- a/package.json
+++ b/package.json
@@ -14,9 +14,20 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
+    "bootstrap": "^5.1.3",
     "gatsby": "^4.3.0",
+    "gatsby-plugin-image": "^2.3.0",
+    "gatsby-plugin-sharp": "^4.3.0",
+    "gatsby-source-contentful": "^7.1.0",
+    "gatsby-source-filesystem": "^4.3.0",
+    "gatsby-source-strapi": "^1.0.2",
+    "gatsby-transformer-sharp": "^4.3.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-bootstrap": "^2.0.3",
+    "react-dom": "^17.0.1",
+    "react-toolbox": "^2.0.0-beta.13",
+    "slugify": "^1.6.3"
   },
   "devDependencies": {
     "prettier": "^2.4.1"
